gnucorn related prob resolved

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,51 @@
+apsw==3.16.2.post1
+asn1crypto==0.24.0
+autopep8==1.5.4
+beautifulsoup4==4.6.0
+chardet==3.0.4
+CherryPy==8.9.1
 click==7.1.2
+cryptography==2.1.4
+cssselect==1.0.3
+cssutils==1.0.2
+dnspython==1.15.0
+enum34==1.1.6
+feedparser==5.2.1
 Flask==1.1.2
-gunicorn==20.0.4
+gunicorn==19.10.0
+html5-parser==0.4.4
+html5lib==0.999999999
+idna==2.6
+ipaddress==1.0.17
 itsdangerous==1.1.0
 Jinja2==2.11.2
+keyring==10.6.0
+keyrings.alt==3.0
+lxml==4.2.1
+Markdown==2.6.9
 MarkupSafe==1.1.1
-
-numpy==1.9.1
-pandas==1.1.1
-python-dateutil==2.8.1
-pytz==2020.1
-six==1.15.0
+mechanize==0.2.5
+msgpack==0.5.6
+netifaces==0.10.4
+olefile==0.45.1
+Pillow==5.1.0
+pycodestyle==2.6.0
+pycrypto==2.6.1
+Pygments==2.2.0
+pygobject==3.26.1
+pyOpenSSL==17.5.0
+pyparsing==2.2.0
+python-dateutil==2.6.1
+pyxdg==0.25
+PyYAML==3.12
+regex==2017.12.12
+repoze.lru==0.7
+Routes==2.4.1
+SecretStorage==2.3.1
+simplejson==3.13.2
+six==1.11.0
+toml==0.10.1
+uTidylib==0.3
+webencodings==0.5
+WebOb==1.7.3
 Werkzeug==1.0.1
