--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 gunicorn==19.9.0
 numpy==1.18.1
+pandas==1.0.1
 Flask==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 matplotlib==3.1.3
 Werkzeug==1.0.0
-scikit-learn==0.22.1
-scipy==1.4.1
+
